reposition bullet X pos so they appear to be coming from playe

--- a/game.html
+++ b/game.html
@@ -83,7 +83,7 @@
 
         function makeBullets() {
             const BULLET_SIZE = 5;
-            var bulletXpos = playerXpos
+            var bulletXpos = playerXpos + PLAYER_WIDTH * 2/3
             var bulletYpos = playerYpos + PLAYER_HEIGHT / 2
             var bulletSpeed = 4;
 
