change enemy speeds based on level

--- a/game.html
+++ b/game.html
@@ -114,10 +114,16 @@
 
             if(level == "easy"){
                 totalEnemies = 3;
+                minEnemySpeed =3;
+                maxEnemySpeed = 5;
             } else if(level == "medium"){
                 totalEnemies = 5;
+                minEnemySpeed = 5;
+                maxEnemySpeed = 8;
             } else {
                 totalEnemies= 8;
+                minEnemySpeed = 8;
+                maxEnemySpeed = 12;
             }
 
 
