--- a/game.html
+++ b/game.html
@@ -111,7 +111,8 @@
             canvas = document.getElementById('gameCanvas');
             canvasContext = canvas.getContext('2d');
             setInterval(mainloop, 1000 / 50);
-
+            var username = prompt('Enter username')
+            
             if(level == "easy"){
                 totalEnemies = 3;
                 minEnemySpeed =3;
