display score on canvas

--- a/game.html
+++ b/game.html
@@ -230,10 +230,10 @@
             }
 
 
-            // //display score and lives on screen
-            // canvasContext.font = '16pt Calibri';
-            // canvasContext.fillStyle = 'blue';
-            // canvasContext.fillText('Score: ' + score, canvas.width * 0.02, 40);
+            //display score and lives on screen
+            canvasContext.font = '16pt Calibri';
+            canvasContext.fillStyle = 'blue';
+            canvasContext.fillText('Score: ' + score, canvas.width * 0.02, 40);
 
 
         } //end of function mainloop()
