show no. of lives on canvas

--- a/game.html
+++ b/game.html
@@ -235,6 +235,8 @@
             canvasContext.font = '16pt Calibri';
             canvasContext.fillStyle = 'blue';
             canvasContext.fillText('Score: ' + score, canvas.width * 0.02, 40);
+            canvasContext.fillText('Lives: ' + lives, canvas.width * 0.85, 40);
+
 
 
         } //end of function mainloop()
