show text 'Game Over' when lives < 1

--- a/game.html
+++ b/game.html
@@ -246,16 +246,16 @@
 
             
          } else {
-            // canvasContext.font = '32pt Calibri'; //sets font
-            //     canvasContext.fillStyle = 'purple'; //sets font colour
-            //     canvasContext.shadowBlur = 2; //sets shadow properties
-            //     canvasContext.shadowColor = 'white'
+            canvasContext.font = '32pt Calibri'; //sets font
+                canvasContext.fillStyle = 'purple'; //sets font colour
+                canvasContext.shadowBlur = 2; //sets shadow properties
+                canvasContext.shadowColor = 'white'
 
 
-            //     canvasContext.fillText('Game Over', canvas.width * 0.35, canvas.height * 0.45); //informs the user that they have lost
-            //     canvasContext.fillText(username + ', Your score is ' + playerScore, (canvas.width - username.length*32) * 0.25, canvas.height * 0.55); //displays current score
-            //     canvasContext.fillText('Your high score is ' + localStorage.getItem('highscore'), canvas.width * 0.24, canvas.height * 0.65); //display highscore
-            //     //display 'game over' and score
+                canvasContext.fillText('Game Over', canvas.width * 0.35, canvas.height * 0.45); //informs the user that they have lost
+                canvasContext.fillText(username + ', Your score is ' + playerScore, (canvas.width - username.length*32) * 0.25, canvas.height * 0.55); //displays current score
+                canvasContext.fillText('Your high score is ' + localStorage.getItem('highscore'), canvas.width * 0.24, canvas.height * 0.65); //display highscore
+                //display 'game over' and score
         //     calculateHighScore();
         //     canvasContext.font = '16pt Calibri';
         //     canvasContext.fillStyle = 'blue';
