add buttons for play and pause with unicode dec values to get symbols

--- a/gameNEW.html
+++ b/gameNEW.html
@@ -4,13 +4,13 @@
 <!-- <div id="container">
   <div class="title">
   <h1>Space Walk</h1>
-  </div>
+</div>-->
 
 <div class="buttons">
   <button id="playButton">&#x23f5;</button>
   <button id="pauseButton">&#x23f8;</button>
 
-</div> -->
+</div>
 
 
 <div class="canvas">
@@ -206,7 +206,7 @@ text-align: right;
             //if condition for converting entered value to lowercase (for chacking whether valid level was entered) as long as the user entered a valid value (not null values)
             if(level !== null && level !== ""){
                 level = level.toLowerCase();
-                // playGame=false;
+                playGame=false;
             }
 
             //when valid level is not entered, keep asking for level and converting it to lowercase to chack whether valid value was entered
