add eventlisteners to detect whether play/pause buttons were pressed

--- a/gameNEW.html
+++ b/gameNEW.html
@@ -319,8 +319,8 @@ text-align: right;
           drawImg(background, BACKGROUND_SOURCE_X_POS, BACKGROUND_SOURCE_Y_POS, BACKGROUND_SOURCE_WIDTH, BACKGROUND_SOURCE_HEIGHT, BACKGROUND_X_POS, BACKGROUND_Y_POS, BACKGROUND_WIDTH, BACKGROUND_HEIGHT);
           	music.pause();
           if(lives>0){
-          // document.getElementById('playButton').addEventListener("click", play);
-          // document.getElementById('pauseButton').addEventListener("click", pause);
+          document.getElementById('playButton').addEventListener("click", play);
+          document.getElementById('pauseButton').addEventListener("click", pause);
           //player sprites
           drawImg(player, playerSourceXpos, playerSourceYpos, PLAYER_SOURCE_WIDTH, PLAYER_SOURCE_HEIGHT, playerXpos, playerYpos, PLAYER_WIDTH, PLAYER_HEIGHT);
           //road image
