run mainloop if playGame == true

--- a/gameNEW.html
+++ b/gameNEW.html
@@ -20,7 +20,7 @@
     <!--width and heigh of canvas-->
 
 </div>
-    <!-- <style>
+    <style>
     @font-face {
         font-family: Simple;
         src: url(Simple.ttf);
@@ -64,7 +64,7 @@ text-align: right;
 }
 
 
-    </style> -->
+    </style>
 
     <script>
         //variables for canvas
@@ -305,13 +305,7 @@ text-align: right;
             }
         }
 
-// function play(evt){
-// playGame=true;
-// }
-//
-// function pause(evt){
-//   playGame=false
-// }
+s
 
              //mainloop that continuously runs every 50 seconds
         function mainloop() {
