centre the canvas and place title and buttons side by side using grid layout

--- a/gameNEW.html
+++ b/gameNEW.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <meta charset="UTF-8">
 <body>
-<!-- <div id="container">
+<div id="container">
   <div class="title">
   <h1>Space Walk</h1>
-</div>-->
+</div>
 
 <div class="buttons">
   <button id="playButton">&#x23f5;</button>
