--- a/gameNEW.html
+++ b/gameNEW.html
@@ -17,14 +17,14 @@
   <canvas id="gameCanvas" width="600" height="600"></canvas>
 
 </div>
-    <!--width and heigh of canvas-->
+    
 
 </div>
     <style>
-    @font-face {
+    /* @font-face {
         font-family: Simple;
         src: url(Simple.ttf);
-    }
+    } */
     #container{
       display: grid;
       grid-template-columns: 1fr 300px 297px 1fr;
