--- a/gameNEW.html
+++ b/gameNEW.html
@@ -17,14 +17,14 @@
   <canvas id="gameCanvas" width="600" height="600"></canvas>
 
 </div>
-    
+
 
 </div>
     <style>
-    /* @font-face {
+    @font-face {
         font-family: Simple;
         src: url(Simple.ttf);
-    } */
+    }
     #container{
       display: grid;
       grid-template-columns: 1fr 300px 297px 1fr;
@@ -402,15 +402,15 @@ lives=3
 
   } else {      alert("Thank you for playing! We hope you will come back!")
   alert("You can refresh the page if you feel like replaying!")
-        playGame=false;
-        lives=3
-        score=0;
-        playerXpos = (600 - PLAYER_WIDTH) / 2;
-        playerYpos = 600 - PLAYER_HEIGHT;
-            canvasContext.fillText('Your high score is ' + localStorage.getItem('highScore'), canvas.width * 0.24, canvas.height * 0.65); //display highscore
-document.getElementById("pauseButton").style.display = 'none'
-document.getElementById("playButton").style.display = 'none'
-enemies.forEach(function (enemy, i, array) {delete enemies[i]})
+//         playGame=false;
+//         lives=3
+//         score=0;
+//         playerXpos = (600 - PLAYER_WIDTH) / 2;
+//         playerYpos = 600 - PLAYER_HEIGHT;
+//             canvasContext.fillText('Your high score is ' + localStorage.getItem('highScore'), canvas.width * 0.24, canvas.height * 0.65); //display highscore
+// document.getElementById("pauseButton").style.display = 'none'
+// document.getElementById("playButton").style.display = 'none'
+// enemies.forEach(function (enemy, i, array) {delete enemies[i]})
   }
 }
 }
