use px values instead of fr values for grid-template-columns so the title/buttons doesn't misalign with canvas

--- a/gameNEW.html
+++ b/gameNEW.html
@@ -402,15 +402,15 @@ lives=3
 
   } else {      alert("Thank you for playing! We hope you will come back!")
   alert("You can refresh the page if you feel like replaying!")
-//         playGame=false;
-//         lives=3
-//         score=0;
-//         playerXpos = (600 - PLAYER_WIDTH) / 2;
-//         playerYpos = 600 - PLAYER_HEIGHT;
-//             canvasContext.fillText('Your high score is ' + localStorage.getItem('highScore'), canvas.width * 0.24, canvas.height * 0.65); //display highscore
-// document.getElementById("pauseButton").style.display = 'none'
-// document.getElementById("playButton").style.display = 'none'
-// enemies.forEach(function (enemy, i, array) {delete enemies[i]})
+        playGame=false;
+        lives=3
+        score=0;
+        playerXpos = (600 - PLAYER_WIDTH) / 2;
+        playerYpos = 600 - PLAYER_HEIGHT;
+            canvasContext.fillText('Your high score is ' + localStorage.getItem('highScore'), canvas.width * 0.24, canvas.height * 0.65); //display highscore
+document.getElementById("pauseButton").style.display = 'none'
+document.getElementById("playButton").style.display = 'none'
+enemies.forEach(function (enemy, i, array) {delete enemies[i]})
   }
 }
 }
