use document.createElement('audio') to add music

--- a/gameNEW.html
+++ b/gameNEW.html
@@ -84,14 +84,14 @@ text-align: right;
         var background = new Image();
         background.src = "bg.png"
 
-        // var bulletSound = document.createElement("audio")
-        // bulletSound.src = "bulletsound.mp4"
-        //
-        //         var music = document.createElement("audio")
-        //         music.src = "music.mp4"
-        //
-        //         var gameOver = document.createElement("audio")
-        //         gameOver.src = "gameover.mp4"
+        var bulletSound = document.createElement("audio")
+        bulletSound.src = "bulletsound.mp4"
+
+                var music = document.createElement("audio")
+                music.src = "music.mp4"
+
+                var gameOver = document.createElement("audio")
+                gameOver.src = "gameover.mp4"
         //constants for background properties
         //constants for background physical properties
         const BACKGROUND_X_POS = 0;
