music.pause() for mainloop so music doesn't play when game is paused

--- a/gameNEW.html
+++ b/gameNEW.html
@@ -375,6 +375,7 @@ if(playGame==true){
 
          } else {
             //calculate high score
+            //play gma eover sound effect
             gameOver.play();
             calculateHighScore();
             canvasContext.font = '32pt Calibri'; //sets font
