--- a/gameNEW.html
+++ b/gameNEW.html
@@ -1,3 +1,12 @@
+<!--
+dropdown for levels
+press cancel
+
+
+-->
+
+
+
 <!doctype html>
 <meta charset="UTF-8">
 
@@ -231,7 +240,7 @@
 
     //variable for checking whether play or pause is pressed
     var playGame = false;
-
+var validUsername=true;
     //increase timer by 1 every 0.5 second when player has lives remaining, and play button has been pressed (so the score won't increase when pause is pressed)
     setInterval(function() {
       if (lives > 0 && playGame == true) {
@@ -247,25 +256,37 @@
       setInterval(mainloop, 1000 / 50);
       //variable for asking username
       var username = prompt('Enter username')
-      //keep asking for username till one is entered
-      while (username == null || username == "") {
-        var username = prompt('Please enter username')
-      }
-      //variable for asking level
-      var level = prompt('Hello ' + username + '. Enter level: Easy, Medium or Hard?')
-      //if condition for converting entered value to lowercase (for chacking whether valid level was entered) as long as the user entered a valid value (not null values)
-      if (level !== null && level !== "") {
-        level = level.toLowerCase();
-        playGame = false;
-      }
+      while (username == "" || username == null){
+        var confirmExit = confirm('You cannot play without a username. Press OK to enter username, or press cancel to leave game.')
+        // if(confirmExit == true){
+        //   var username = prompt('Enter username')
+        // }
+        // else {
+        //   validUsername = false;
+        //   alert('Goodbye!');
+        //   break;
 
-      //when valid level is not entered, keep asking for level and converting it to lowercase to chack whether valid value was entered
-      while (level !== 'easy' && level !== 'medium' && level !== 'hard') {
-        var level = prompt('Hello ' + username + '. Please enter valid level: Easy, Medium or Hard?')
-        if (level !== null && level !== "") {
-          level = level.toLowerCase();
         }
       }
+
+      if(validUsername){
+        var level = prompt('Hello ' + username + '. Enter level: Easy, Medium or Hard?')
+        //if condition for converting entered value to lowercase (for chacking whether valid level was entered) as long as the user entered a valid value (not null values)
+        if (level !== null && level !== "") {
+          level = level.toLowerCase();
+          playGame = false;
+        }
+
+        //when valid level is not entered, keep asking for level and converting it to lowercase to chack whether valid value was entered
+        while (level !== 'easy' && level !== 'medium' && level !== 'hard') {
+          var level = prompt('Hello ' + username + '. Please enter valid level: Easy, Medium or Hard?')
+          if (level !== null && level !== "") {
+            level = level.toLowerCase();
+          }
+        }
+
+      //variable for asking level
+
 
       //set different values for the total enemies, total bullets and max and min speeds for enemies, based on the level chosen
       if (level == "easy") {
@@ -290,7 +311,9 @@
       alert('Hitting a comet would lower your lives by 1. You have 3 lives and the aim is to survive for as long as possible.')
       alert('Press play button to start.')
 
-
+} else {
+  stopGame();
+}
     } //end of function
 
     function help() {
@@ -465,20 +488,29 @@
         } else {//if player doesn't want to play again
           alert("Thank you for playing! We hope you will come back!")//thanks message
           alert("You can refresh the page if you feel like replaying!")
-          playGame = false;//mainloop is stopped
-          lives = 3//variables are set to default values
-          score = 0;
-          playerXpos = (600 - PLAYER_WIDTH) / 2;
-          playerYpos = 600 - PLAYER_HEIGHT;
-          canvasContext.fillText('Your high score is ' + localStorage.getItem('highScore'), canvas.width * 0.24, canvas.height * 0.65); //display highscore
-          document.getElementById("pauseButton").style.display = 'none'//play and pasue buttons are removed
-          document.getElementById("playButton").style.display = 'none'
-          enemies.forEach(function(enemy, i, array) {//enemies are deleted
-            delete enemies[i]
-          })
+          stopGame();
+
         }
       }
     }//end of function reload()
+
+var gameStopped =false;
+    function stopGame(){
+gameStopped = true;
+      playGame = false;//mainloop is stopped
+      lives = 3//variables are set to default values
+      score = 0;
+      playerXpos = (600 - PLAYER_WIDTH) / 2;
+      playerYpos = 600 - PLAYER_HEIGHT;
+      canvasContext.fillText('Your high score is ' + localStorage.getItem('highScore'), canvas.width * 0.24, canvas.height * 0.65); //display highscore
+      document.getElementById("pauseButton").style.display = 'none'//play and pasue buttons are removed
+      enemies.forEach(function(enemy, i, array) {//enemies are deleted
+        delete enemies[i]
+      })
+
+    }
+
+
 
     function calculateHighScore() {
       //set var highscore to the highscore stored in local storage
@@ -545,7 +577,13 @@
 
     //when play button is pressed, playGame = true
     function play(evt) {
-      playGame = true;
+//if (gameStopped==false){
+  playGame = true;
+} else {
+//  location.reload();
+}
+
+
     }//end of function play(evt)
 
     //when pause button is pressed, playGame = false
