--- a/gameNEW.html
+++ b/gameNEW.html
@@ -261,15 +261,15 @@ var validUsername=true;
         if(confirmExit == true){
           var username = prompt('Enter username')
         }
-        // else {
-        //   validUsername = false;
-        //   alert('Goodbye!');
-        //   break;
+        else {
+          validUsername = false;
+          alert('Goodbye!');
+          break;
 
         }
       }
 
-      if(validUsername){
+      // if(validUsername){
         var level = prompt('Hello ' + username + '. Enter level: Easy, Medium or Hard?')
         //if condition for converting entered value to lowercase (for chacking whether valid level was entered) as long as the user entered a valid value (not null values)
         if (level !== null && level !== "") {
