use gameStopped = true if user chooses not to play the game

--- a/gameNEW.html
+++ b/gameNEW.html
@@ -496,7 +496,7 @@ var validUsername=true;
 
 var gameStopped =false;
     function stopGame(){
-gameStopped = true;
+//gameStopped = true;
       playGame = false;//mainloop is stopped
       lives = 3//variables are set to default values
       score = 0;
