only present level prompts and instruction when username is entered

--- a/gameNEW.html
+++ b/gameNEW.html
@@ -269,7 +269,7 @@ var validUsername=true;
         }
       }
 
-      // if(validUsername){
+       if(validUsername){
         var level = prompt('Hello ' + username + '. Enter level: Easy, Medium or Hard?')
         //if condition for converting entered value to lowercase (for chacking whether valid level was entered) as long as the user entered a valid value (not null values)
         if (level !== null && level !== "") {
